# pySwTools

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
pyswtools/: config.py  helper_sw.py  main.py  utils.py
pyswtools/auto_exporter/: main.py
pyswtools/clean/: main.py
pyswtools/copy_full_assembly/: main.py
pyswtools/properties/: main.py
pyswtools/ready_dxf/: dxf_utilities.py  file_utilities.py  main.py
pyswtools/stat/: definitions.py  main.py
src/: dxf_utilities.py  file_utilities.py
