[tool.poetry]
name = "pyswtools"
version = "0.8.1"
description = "Set of tools to improve Solidworks usage"
authors = ["ldevillez <louis.devillez@gmail.com>"]
license = "GNU General Public License"
readme = "README.md"
homepage = "https://github.com/ldevillez/pySwTools"
repository = "https://github.com/ldevillez/pySwTools"

packages = [
  {include = "pyswtools"}
]

[tool.poetry.dependencies]
python = "^3.10"
ezdxf = "^1.0.3"
click = "^8.1.3"
pywin32 = { version = "^306", markers = "sys_platform == 'win32'" }
rtoml = "^0.9.0"
appdirs = "^1.4.4"
pydantic = "^1.10.7"
numpy-stl = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint= "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyswtools = "pyswtools.main:cli"
